--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>TypeScript | App</title>
-    <!--<script src="http://knockoutjs.com/downloads/knockout-3.3.0.js"></script>-->
-    <script src="app/modules/home/Home.js"></script>
-    <script src="app/modules/md-module/mdModule.js"></script>
-    <script src="app/modules/classes/classes.js"></script>
+
+    <!--<script src="app/modules/home/Home.js"></script>-->
+    <!--<script src="app/modules/md-module/mdModule.js"></script>-->
+    <!--<script src="app/modules/classes/classes.js"></script>-->
+    <script src="app/modules/global-module/global-module.js"></script>
 </head>
 <body>
 
